@@ -125,7 +125,7 @@
         <!-- attach urls -->
         <md-list-item ng-show="::(editor.component.attachUrls.length > 0)">
           <md-icon>link</md-icon>
-          <p ng-repeat="url in ::editor.component.attachUrls"><a target="_new" ng-href="{{::url.value}}" ng-bind="::url.value"><!-- link --></a></p>
+          <p ng-repeat="url in ::editor.component.attachUrls"><a rel="noopener" target="_new" ng-href="{{::url.value}}" ng-bind="::url.value"><!-- link --></a></p>
         </md-list-item>
         <!-- comment -->
         <md-list-item ng-show="::editor.component.comment">
